--- a/data/webscrap/package.json
+++ b/data/webscrap/package.json
@@ -18,13 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
-    "jsdom": "^24.0.0"
+    "axios": "^1.7.7",
+    "jsdom": "^24.1.3"
   },
   "devDependencies": {
-    "@stryker-mutator/core": "^8.2.6",
-    "@stryker-mutator/vitest-runner": "^8.2.6",
+    "@stryker-mutator/core": "^8.6.0",
+    "@stryker-mutator/vitest-runner": "^8.6.0",
     "stryker-cli": "^1.0.2",
-    "vitest": "^1.5.3"
-  }
+    "vitest": "^1.6.0"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
